--- a/sass/components/_articles.sass
+++ b/sass/components/_articles.sass
@@ -12,6 +12,7 @@
     article
         max-width: 15rem
         min-height: 25rem
+        margin-inline: auto
         border-radius: 1rem 1rem 0 0
         background-color: $clr-neutral-999
 
